--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.14.1592",
+    "sass": "^1.83.0",
     "vue": "latest",
     "vue-router": "latest"
   },
