--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
   "devDependencies": {
     "@iconify-json/proicons": "^1.2.11",
-    "@nuxt/icon": "^1.10.2"
+    "@nuxt/icon": "^1.10.2",
+    "@nuxtjs/color-mode": "^3.5.2"
   }
 }
