--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.4",
     "@nuxt/fonts": "^0.10.3",
+    "content": "4.0.6",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.14.1592",
     "sass": "^1.83.0",
     "vue": "latest",
