--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/content": "^2.13.4",
     "@nuxt/fonts": "^0.10.3",
+    "@nuxtjs/robots": "5.1.0",
     "content": "4.0.6",
     "date-fns": "^4.1.0",
     "nuxt": "^3.14.1592",
