--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@giscus/vue": "^3.1.1",
     "@nuxt/content": "^2.13.4",
-    "@nuxt/fonts": "^0.10.3",                                                    
+    "@nuxt/fonts": "^0.10.3",
     "content": "4.0.6",
     "date-fns": "^4.1.0",
     "nuxt": "^3.14.1592",
